# mobiliar-arena

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/agents/: build-agent.md  docs-scraper.md  meta-agent.md  planner.md  test-phaser.md
.claude/commands/: bug.md  build.md  chore.md  clean_worktree.md  feature.md  fix.md  init_worktree.md  install.md  lfg.md  load_ai_docs.md  ping.md  plan-concise.md  plan-product.md  prime-phaser.md  prime.md  prime_cc.md  prime_specific_docs.md  quick-plan.md  review.md  start.md  test-game.md  validate-product-plan.md
.claude/skills/agent-browser/: SKILL.md
adws/: adw_plan_build.py  agent.py  data_types.py  trigger_cron.py  trigger_webhook.py  utils.py
ai_docs/: README.md  balena-cli.md  game-testing.md  phaser-actions.md  phaser-animations.md  phaser-audio.md  phaser-bitmap-text.md  phaser-blitter.md  phaser-cameras.md  phaser-container.md  phaser-data-manager.md  phaser-device.md  phaser-display-list.md  phaser-display.md  phaser-dom-element.md  phaser-events.md  phaser-fx.md  phaser-game.md  phaser-gameobject-components.md  phaser-gameobject-factories.md  phaser-gameobjects-image.md  phaser-gameobjects.md  phaser-geometry.md  phaser-graphics.md  phaser-group.md  phaser-input.md  phaser-loader.md  phaser-math.md  phaser-nine-slice.md  phaser-particles.md  phaser-physics.md  phaser-plane.md  phaser-render-texture.md  phaser-rope.md  phaser-scale-manager.md  phaser-scenes.md  phaser-shader.md  phaser-sprite.md  phaser-text-gameobject.md  phaser-textures.md  (+6 more)
docker/: balena.yml  docker-compose.yml
docker/app/: .dockerignore  Dockerfile.template
docker/app/client/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  test-layout-config.js  vitest.config.ts  vitest.setup.ts
docker/app/client/mocks/: phaser3spectorjs.ts
docker/app/client/scripts/: generate-theme-assets.py
docker/app/client/src/: env.d.ts  (+1 more)
docker/app/server/: .gitignore  app.ts  launchnodeapp.sh  package-lock.json  package.json  simulate-prizes.test.ts  tsconfig.json
docker/app/shared/: GameEvents.ts  PrizeTextureKeys.ts
docker/browser/: Dockerfile.template  package.json  picom.conf
docker/browser/src/: 10-modules.conf  server.js  start.sh  startx.sh
docker/cloudflared/: Dockerfile.template  entrypoint.sh
docker/phidgets/: Dockerfile.template  start.sh
docker/phidgets/libphidget22/: ChangeLog  README  configure  library_version
docker/phidgets/libphidget22extra/: ChangeLog  README  configure
docker/phidgets/phidget22admin/: README  configure  main.c
docker/phidgets/phidget22networkserver/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  networkserver.pc-dist
docker/phidgets/phidget22networkserver/files/etc/phidgets/: phidget22networkserver.pc
docker/phidgets/phidget22networkserver/src/: server.c  server.h  utils.c
docker/phidgets/phidget22networkserver/src/dictionary/: database.c  dictionary.c  dictionary.h
docker/phidgets/phidget22networkserver/src/phidgetserver/: phidgetserver.c
docker/phidgets/phidget22networkserver/src/webserver/: webapi.c  webserver.c  webserver.h  websocket.c  webutils.c
docker/scp-server/: Dockerfile.template  README.md  start.sh
scripts/: bundle.sh  generate-plays-chart.py  set-fleet-env.sh  start.sh
specs/: feat-debug-gui.md  feat-free-paddle-movement.md  feat-lobby-scene-and-key-remapping.md  feat-play-statistics.md  keyboard-input-report.md  phase-3-visual-polish.md  remove-prize-system.md
specs/architecture/: README.md  circular-physics.md  coding-standards.md  event-driven-prize-flow.md  input-system.md  operating-hours.md  prize-distribution-simple.md  scene-flow.md
specs/product/: mission.md  requirements.md  roadmap.md  tech-stack.md
(+257 files in other folders)
